# cs2cpp

./: MonoCPPBackend.sln
Cs2Cpp/: ASTVisitor_Scan.cs  ASTVisitor_Shared.cs  Assembly.cs  CodeWriter.cs  CompilationFramework.cs  CppHeaderDebugGenerator.cs  CppHeaderGenerator.cs  CppSourceGenerator.cs  CppSourceGeneratorBase.cs  Cs2Cpp.csproj  ExtensionMethods.cs  GenericInstanceGenerator.cs  NameManager.cs  StaticStateResetter.cs  StructuralVisitorAdapter.cs  Utilities.cs
Cs2Cpp/Properties/: AssemblyInfo.cs
Cs2Cpp/SCI/: Queryables.cs  SCIDefinition.cs  SCIEnumMemberDefinition.cs  SCIEventDefinition.cs  SCIFieldDefinition.cs  SCILocalDefinition.cs  SCIMemberDefinition.cs  SCIMethodDefinition.cs  SCIMethodHandle.cs  SCIOperatorDefinition.cs  SCIPropertyDefinition.cs  SCITypeDefinition.cs  SCITypeHandle.cs
UnitTest/: DemoTest.cs  Program.cs  UnitTest.csproj
UnitTest/Properties/: AssemblyInfo.cs
UnitTest/mscorelib.dll/Assembly/: AssemblyInfo.cs
UnitTest/mscorelib.dll/Mono.Globalization.Unicode/: Normalization.cs
UnitTest/mscorelib.dll/Mono.Math/: BigInteger.cs
UnitTest/mscorelib.dll/Mono.Security/: Uri.cs
UnitTest/mscorelib.dll/System/: DateTimeOffset.cs  DateTimeUtils.cs  NumberFormatter.jvm.cs  String.cs  UIntPtr.cs
UnitTest/mscorelib.dll/System.Reflection.Emit/: EventOnTypeBuilderInst.cs
UnitTest/mscorelib.dll/System.Threading.Tasks/: Task.cs  Task_T.cs
UnitTest/tests/arrays/: Program.cs
build-environment/: CMakeLists.txt  CMake_Project_Config.txt
build-environment/cli/dev/src/: all.cpp
build-environment/cli/dev/src/System/: Array.cpp  Console.cpp  DateTime.cpp  Decimal.cpp  Delegate.cpp  Enum.cpp  Exception.cpp  Integral.cpp  NotImplementedException.cpp  Object.cpp  String.cpp  ValueType.cpp
build-environment/cli/include/: array.hpp  casts.hpp  cli-enum.hpp  cli-predecl.hpp  cli.hpp  delegates.hpp  enumerable.hpp  guards.hpp  main.hpp  memory.hpp  string.hpp
build-environment/cli/templates/: CMakeLists_DevExecutable.txt  CMakeLists_Executable.txt
build-environment/include/: arrays_d4b6b5eeea339da.hpp  arrays_d4b6b5eeea339da.template.hpp  mscorlib.hpp  mscorlib.template.hpp
build-environment/lib/: arrays_d4b6b5eeea339da
build-environment/src/: 0.cpp  1.cpp  2.cpp  3.cpp  4.cpp  CMakeLists.txt  stdafx_arrays_d4b6b5eeea339da.hpp  stdafx_mscorlib.hpp
doc/: Abstract.docx
mcs/: mcs.proj
mcs/class/IKVM.Reflection/Reader/: AssemblyReader.cs
mcs/class/Mono.CompilerServices.SymbolWriter/: Mono.CompilerServices.SymbolWriter-net_2_0.csproj  Mono.CompilerServices.SymbolWriter-net_4_0.csproj  Mono.CompilerServices.SymbolWriter-net_4_5.csproj
mcs/mcs/: .gitignore  AssemblyInfo.cs  anonymous.cs  argument.cs  assembly.cs  assign.cs  attribute.cs  class.cs  const.cs  constant.cs  cs-parser.cs  decl.cs  delegate.cs  driver.cs  ecore.cs  enum.cs  expression.cs  field.cs  generic.cs  ikvm.cs  import.cs  iterators.cs  linq.cs  mcs-build.csproj  mcs-net_4_0.csproj  mcs-net_4_5.csproj  mcs.csproj  method.cs  module.cs  namespace.cs  nullable.cs  property.cs  statement.cs  typespec.cs  visit.cs
